Added the recipe for lasagna

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><p><a href="../odin-recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p></li>
+        </ul>
     </body>
 </html>
