--- a/lasagna.html
+++ b/lasagna.html
@@ -6,6 +6,40 @@
         <title>Lasagna Recipe</title>
     </head>
     <body>
-        
+        <h1>Lasagna</h1>    
+        <img src="../odin-recipes/images/Lasagna.jpg" alt="Lasagna image" height="310" width="310">
+        <p>Lasagna is an Italian favorite that combines a series of savory flavors into a comforting and delicious meal. At its center are broad, flat sheets of pasta topped with thick meat or vegetable sauce, creamy béchamel or ricotta cheese, and a generous sprinkling of mozzarella and Parmesan baked until the edges are golden brown red and bubbly, the wrappers come together deliciously , forming a cohesive whole</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Sweet Italian sausage <em>and</em>lean ground beef</li>
+            <li>Onion</li>
+            <li>Two cloves of Garlic</li>
+            <li>A can of crushed Tomatoes</li>
+            <li>Two cans of Tomato sauce</li>
+            <li>Two cans of Tomato paste</li>
+            <li>Sugar</li>
+            <li>Spices and Seasonings like fresh parsley, dried basil leaves, salt, italion seasoning, black pepper</li>
+            <li>Lasagna sheets</li>
+            <li>Parmesan, mozzarella, and ricotta cheese</li>
+            <li>Egg</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the Lasagna sheets.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the Lasagna according to the following order:-</li>
+            <ol>
+                <li>Meat sauce</li>
+                <li>Lasagna sheet</li>
+                <li>Ricotta mixture</li>
+                <li>Mozzarella slice</li>
+                <li>Meat sauce</li>
+                <li>Parmesan cheese</li>
+                <li>Repeat the layers, then top with the remaining Parmesan.</li>
+            </ol>
+            <li>Cover with foil and bake for 50 minutes in the oven at 375 degrees F and remove the foil after 25 minutes.</li>
+            <li>Let the Lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
