--- a/lasagna.html
+++ b/lasagna.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Lasagna</h1>    
         <img src="../odin-recipes/images/Lasagna.jpg" alt="Lasagna image" height="310" width="310">
+        <img src="../odin-recipes/images/Lasagna 2.png" alt="Lasagna image" height="310" width="310">
         <p>Lasagna is an Italian favorite that combines a series of savory flavors into a comforting and delicious meal. At its center are broad, flat sheets of pasta topped with thick meat or vegetable sauce, creamy béchamel or ricotta cheese, and a generous sprinkling of mozzarella and Parmesan baked until the edges are golden brown red and bubbly, the wrappers come together deliciously , forming a cohesive whole</p>
         <h2>Ingredients</h2>
         <ul>
@@ -25,21 +26,16 @@
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the Lasagna sheets.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the Lasagna according to the following order:-</li>
-            <ol>
-                <li>Meat sauce</li>
-                <li>Lasagna sheet</li>
-                <li>Ricotta mixture</li>
-                <li>Mozzarella slice</li>
-                <li>Meat sauce</li>
-                <li>Parmesan cheese</li>
-                <li>Repeat the layers, then top with the remaining Parmesan.</li>
-            </ol>
-            <li>Cover with foil and bake for 50 minutes in the oven at 375 degrees F and remove the foil after 25 minutes.</li>
-            <li>Let the Lasagna rest before serving.</li>
+            <li>Gather all your ingredients.</li>
+            <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
+            <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.
+            <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</li>
+            <li>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
+            <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+            <li>To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese./li>
+            <li>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese</li>
+            <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
+            <li>Rest lasagna for 15 minutes before serving.</li>
         </ol>
     </body>
-</html>
+</html> 
