Added the recipe for Shrimp biriyani

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><p><a href="../odin-recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></p></li>
+            <li><a href="../odin-recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
+            <li><a href="../odin-recipes/Shrimp_Biriyani.html" target="_blank" rel="noopener noreferrer">Shrimp Biriyani</a></li>
         </ul>
     </body>
 </html>
